[gd_scene load_steps=16 format=3 uid="uid://df54fyq68jm75"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_772te"]
[ext_resource type="Script" path="res://scenes/health_bar.gd" id="2_acm0s"]
[ext_resource type="Texture2D" uid="uid://ckxvxab3fdn5q" path="res://assets/weapons/1px/28.png" id="2_tget3"]
[ext_resource type="Texture2D" uid="uid://bbe7inuixceru" path="res://assets/submarine.png" id="3_3lk6e"]
[ext_resource type="Material" uid="uid://cqadg7uoksdaf" path="res://particlefx/player_bubble.tres" id="4_ef332"]
[ext_resource type="Texture2D" uid="uid://clt252gv1vtut" path="res://assets/bubbles/bubble_3.png" id="4_vnxw8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3rtrh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t8ldv"]
bg_color = Color(0.490196, 1, 0.533333, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbg1m"]
bg_color = Color(0.0338533, 0.0338533, 0.0338532, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0
shadow_color = Color(0, 0, 0, 0.27451)
shadow_offset = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_atq71"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_63iig"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Weapon/Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 0)]
}

[sub_resource type="Animation" id="Animation_7tkup"]
resource_name = "recoil"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Weapon/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Weapon/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(7, 0), Vector2(3, 0), Vector2(7, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_34n0u"]
_data = {
"RESET": SubResource("Animation_63iig"),
"recoil": SubResource("Animation_7tkup")
}

[sub_resource type="Animation" id="Animation_qdb2m"]
resource_name = "hurt"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_af4sq"]
_data = {
"hurt": SubResource("Animation_qdb2m")
}

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.8, 0.8)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_772te")
fireDelay = 0.3

[node name="HealthBar" type="ProgressBar" parent="."]
z_index = 1
offset_left = -16.25
offset_top = 12.5
offset_right = 15.75
offset_bottom = 16.5
theme_override_styles/background = SubResource("StyleBoxEmpty_3rtrh")
theme_override_styles/fill = SubResource("StyleBoxFlat_t8ldv")
value = 60.0
show_percentage = false
script = ExtResource("2_acm0s")

[node name="DamageBar" type="ProgressBar" parent="HealthBar"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxFlat_qbg1m")
theme_override_styles/fill = SubResource("StyleBoxFlat_atq71")
value = 80.0
show_percentage = false

[node name="Timer" type="Timer" parent="HealthBar"]
wait_time = 0.4
one_shot = true

[node name="Weapon" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Weapon"]
z_index = 1
position = Vector2(7, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_tget3")

[node name="GunPosition" type="Marker2D" parent="Weapon"]
unique_name_in_owner = true
position = Vector2(25, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -4)
scale = Vector2(2, 2)
texture = ExtResource("3_3lk6e")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(0, -4)
polygon = PackedVector2Array(-16, -6, -2, -6, -2, -14, 6, -14, 6, -10, 4, -10, 4, -6, 16, -6, 16, 14, -16, 14)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
visible = false
position = Vector2(0, -4)
scale = Vector2(1.05, 1.05)
polygon = PackedVector2Array(-16, -6, -2, -6, -2, -14, 6, -14, 6, -10, 4, -10, 4, -6, 16, -6, 16, 14, -16, 14)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(1, 1, 1, 0.588235)
show_behind_parent = true
position = Vector2(-11, 0)
emitting = false
amount = 20
process_material = ExtResource("4_ef332")
texture = ExtResource("4_vnxw8")
lifetime = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_34n0u")
}

[node name="EffectPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_af4sq")
}

[node name="FireDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="ImmuneTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PowerupTimer" type="Timer" parent="."]

[connection signal="timeout" from="HealthBar/Timer" to="HealthBar" method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ImmuneTimer" to="." method="_on_immune_timer_timeout"]
